# rust-eth-kzg

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release-please-config.json
bindings/c/: CHANGELOG.md  Cargo.toml  README.md  build.rs
bindings/c/src/: blob_to_kzg_commitment.rs  compute_blob_kzg_proof.rs  compute_cells.rs  compute_cells_and_kzg_proofs.rs  compute_kzg_proof.rs  lib.rs  pointer_utils.rs  recover_cells_and_kzg_proofs.rs  verify_blob_kzg_proof.rs  verify_blob_kzg_proof_batch.rs  verify_cells_and_kzg_proofs.rs  verify_cells_and_kzg_proofs_batch.rs  verify_kzg_proof.rs
bindings/csharp/rust_code/: Cargo.toml  build.rs
bindings/java/rust_code/: CHANGELOG.md  Cargo.toml  build.rs  ethereum_cryptography_LibEthKZG.h  ethereum_cryptography_LibPeerDASKZG.h
bindings/java/rust_code/src/: errors.rs  lib.rs
bindings/nim/rust_code/: CHANGELOG.md  Cargo.toml  build.rs
bindings/node/: .eslintrc.js  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  jest.config.ts  package.json  tsconfig.json
bindings/node/.github/workflows/: CI.yml
bindings/node/__test__/: index.spec.ts
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-arm64-musl/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/win32-arm64-msvc/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs
bls12-381/: Cargo.toml
bls12-381/benches/: benchmark.rs
bls12-381/src/: batch_inversion.rs  batch_point_addition.rs  fixed_base_msm.rs  lib.rs  precomp.rs  precomp_table.rs  precomp_table_new.rs
bls12_381/: CHANGELOG.md  Cargo.toml  README.md
bls12_381/benches/: benchmark.rs
bls12_381/src/: batch_inversion.rs  fixed_base_msm.rs  lib.rs  lincomb.rs
crates/cryptography/bls12_381/: Cargo.toml  README.md
crates/cryptography/bls12_381/benches/: benchmark.rs
crates/cryptography/bls12_381/src/: batch_addition.rs  batch_inversion.rs  booth_encoding.rs  fixed_base_msm.rs  lib.rs  (+2 more)
crates/cryptography/kzg_multi_open/: Cargo.toml  README.md
crates/cryptography/kzg_single_open/: Cargo.toml
crates/cryptography/polynomial/: Cargo.toml  README.md
crates/eip4844/: Cargo.toml
crates/eip4844/examples/: compute_kzg_proof.rs
crates/eip4844/src/: constants.rs  cryptography.rs  errors.rs  kzg_open.rs  lib.rs  prover.rs  serialization.rs  trusted_setup.rs  verifier.rs
crates/eip4844/tests/: blob_to_kzg_commitment.rs  compute_blob_kzg_proof.rs  compute_kzg_proof.rs  verify_blob_kzg_proof.rs  verify_blob_kzg_proof_batch.rs  verify_kzg_proof.rs
crates/eip7594/: Cargo.toml
crates/eip7594/benches/: benchmark-mt.rs  benchmark-st.rs
crates/eip7594/examples/: compute_cells_and_kzg_proof.rs
crates/eip7594/src/: constants.rs  eip4844_methods.rs  errors.rs  lib.rs  prover.rs  recovery.rs  serialization.rs  trusted_setup.rs  verifier.rs
crates/eip7594/tests/: blob_to_kzg_commitment.rs  common.rs  compute_cells_and_kzg_proofs.rs  recover_cells_and_kzg_proofs.rs  verify_cell_kzg_proof_batch.rs
crates/maybe_rayon/: Cargo.toml
crates/maybe_rayon/src/: lib.rs  multi_threaded.rs  single_threaded.rs
crates/serialization/: Cargo.toml
crates/serialization/src/: errors.rs  lib.rs  types.rs
crates/trusted_setup/: Cargo.toml
crates/trusted_setup/src/: lib.rs
cryptography/bls12_381/: Cargo.toml  README.md
cryptography/bls12_381/benches/: benchmark.rs
cryptography/bls12_381/src/: batch_add.rs  batch_add_blst.rs  batch_addition.rs  batch_inversion.rs  booth_encoding.rs  fixed_base_msm.rs  fixed_base_msm_blst.rs  fixed_base_msm_blst_all_windows.rs  fixed_base_msm_pippenger.rs  fixed_base_msm_window.rs  lib.rs  limlee.rs  lincomb.rs  msm.rs  seokim.rs  simple_msm.rs  wnaf.rs
cryptography/erasure_codes/: Cargo.toml  README.md
cryptography/erasure_codes/benches/: benchmark.rs
cryptography/erasure_codes/src/: errors.rs  lib.rs  reed_solomon.rs
cryptography/kzg_multi_open/: Cargo.toml  README.md
cryptography/kzg_multi_open/benches/: benchmark.rs
cryptography/kzg_multi_open/src/: fk20.rs  lib.rs  naive.rs  opening_key.rs  verification_key.rs
cryptography/kzg_single_open/: Cargo.toml
cryptography/kzg_single_open/benches/: benchmark.rs
cryptography/kzg_single_open/src/: lib.rs
cryptography/polynomial/: Cargo.toml  README.md
cryptography/polynomial/benches/: benchmark.rs
cryptography/polynomial/src/: coset_fft.rs  domain.rs  fft.rs  lib.rs  monomial.rs  poly_coeff.rs
eip7594/: CHANGELOG.md  Cargo.toml
eip7594/benches/: benchmark-mt.rs  benchmark-st.rs  benchmark.rs
eip7594/examples/: compute_cells_and_kzg_proof.rs
eip7594/src/: consensus_specs_fixed_test_vector.rs  constants.rs  errors.rs  lib.rs  macros.rs  prover.rs  recovery.rs  serialization.rs  trusted_setup.rs  verifier.rs
eip7594/tests/: blob_to_kzg_commitment.rs  common.rs  compute_cells.rs  compute_cells_and_kzg_proofs.rs  recover_all_cells.rs  recover_cells_and_compute_proofs.rs  recover_cells_and_kzg_proofs.rs  verify_cell_kzg_proof.rs  verify_cell_kzg_proof_batch.rs
erasure_codes/: Cargo.toml
erasure_codes/benches/: benchmark.rs
erasure_codes/src/: errors.rs  lib.rs  reed_solomon.rs
kzg-multi-open/: Cargo.toml
kzg-multi-open/benches/: benchmark.rs
kzg-multi-open/src/: commit_key.rs  consensus_specs_fixed_test_vector.rs  eth_trusted_setup.rs  fk20.rs  lib.rs  lincomb.rs  opening_key.rs  proof.rs  trusted_setup.rs
kzg-multi-open/src/fk20/: batch_toeplitz.rs  naive.rs  toeplitz.rs
kzg_multi_open/: CHANGELOG.md  Cargo.toml  README.md
kzg_multi_open/benches/: benchmark.rs
kzg_multi_open/src/: abstraction_leak.rs  commit_key.rs  fk20.rs  lib.rs  naive.rs  opening_key.rs  proof.rs
kzg_multi_open/src/fk20/: batch_toeplitz.rs  cosets.rs  h_poly.rs  naive.rs  prover.rs  toeplitz.rs  verifier.rs  verify.rs
maybe_rayon/: Cargo.toml
maybe_rayon/src/: lib.rs  multi_threaded.rs  single_threaded.rs
(+186 files in other folders)
