[workspace]

members = [
    "bindings/c",
    "bindings/java/rust_code",
    "bindings/node",
    "bindings/nim/rust_code",
    "bindings/csharp/rust_code",

    "crates/serialization",
    "crates/trusted_setup",
    "crates/maybe_rayon",
    "crates/eip4844",
    "crates/eip7594",

    "crates/cryptography/bls12_381",
    "crates/cryptography/kzg_single_open",
    "crates/cryptography/kzg_multi_open",
    "crates/cryptography/polynomial",
    "crates/cryptography/erasure_codes",
]

resolver = "2"

[workspace.package]
authors = ["Kevaundray Wedderburn <kev@the.dev>"]
edition = "2021"
license = "MIT"
version = "0.8.0"
rust-version = "1.86"
repository = "https://github.com/crate-crypto/rust-eth-kzg"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
cast_sign_loss = "allow"
redundant_pub_crate = "allow"
inline_always = "allow"
wildcard_imports = "allow"

[workspace.dependencies]
# These names are essentially a way to achieve scoping when we publish to crates.io
# Ideally we don't publish bls12_381 and polynomial, but crates.io requires
# all dependencies to be published and not local.
bls12_381 = { package = "ekzg-bls12-381", version = "0.8.0", path = "crates/cryptography/bls12_381" }
polynomial = { package = "ekzg-polynomial", version = "0.8.0", path = "crates/cryptography/polynomial" }
erasure_codes = { package = "ekzg-erasure-codes", version = "0.8.0", path = "crates/cryptography/erasure_codes" }
rust_eth_kzg = { version = "0.8.0", path = "crates/eip7594" }
eip4844 = { version = "0.8.0", path = "crates/eip4844" }
maybe_rayon = { package = "ekzg-maybe-rayon", version = "0.8.0", path = "crates/maybe_rayon" }
trusted_setup = { package = "ekzg-trusted-setup", version = "0.8.0", path = "crates/trusted_setup" }
kzg_single_open = { package = "ekzg-single-open", version = "0.8.0", path = "crates/cryptography/kzg_single_open" }
kzg_multi_open = { package = "ekzg-multi-open", version = "0.8.0", path = "crates/cryptography/kzg_multi_open" }
c_eth_kzg = { version = "0.8.0", path = "bindings/c" }
serialization = { package = "ekzg-serialization", version = "0.8.0", path = "crates/serialization" }
hex = "0.4.3"
rayon = "1.10.0"
rand = "0.8.4"

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }
