[package]
name = "bls12-381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.3", optional = true }
pairing = { version = "0.23" }

# blstrs related dependencies
blstrs = "0.7.1"
ff = "0.13.0"
group = "0.13"
[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false

[features]
parallel = ["rayon"]
