[package]
name = "crate_crypto_internal_peerdas_bls12_381"
description = "This crate provides the internal implementation of the BLS12-381 curve for the Peerdas project."
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { workspace = true }
pairing = { version = "0.23" }

# blstrs related dependencies
blst = { version = "0.3.1", default-features = false, features = [
    "portable",
    "no-threads",
] }
blstrs = { version = "0.7.1", features = ["__private_bench"] }
ff = "0.13.0"
group = "0.13"
ark-ff = "0.4.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
