[package]
name = "eip7594"
description = "This crate provides an implementation of the cryptography needed for EIP-7594"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
kzg_multi_open = { workspace = true }
bls12_381 = { workspace = true }
hex = { workspace = true }
erasure_codes = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
hex = "0.4.3"
serde = "1.0.203"
serde_yaml = "0.9.34+deprecated" #TODO: maybe replace with a non-deprecated version

[[bench]]
name = "benchmark"
harness = false
