[package]
name = "rust_eth_kzg"
description = "This crate provides an implementation of the cryptography needed for EIP-7594"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
kzg_multi_open = { workspace = true }
bls12_381 = { workspace = true }
hex = { workspace = true }
erasure_codes = { workspace = true }
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8.4.0", features = ["compression"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
hex = "0.4.3"
#TODO: note that serde_yaml is now deprecated
serde_yaml = "0.9.34"

[[bench]]
name = "benchmark"
harness = false
