[package]
name = "rust_eth_kzg"
description = "This crate provides an implementation of the cryptography needed for EIP-7594"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
kzg_multi_open = { workspace = true }
bls12_381 = { workspace = true }
hex = { workspace = true }
erasure_codes = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
singlethreaded = ["rayon", "kzg_multi_open/singlethreaded"]
multithreaded = ["rayon", "kzg_multi_open/multithreaded"]

[dev-dependencies]
criterion = "0.5.1"
rand = { workspace = true }
hex = { workspace = true }
# Serde-yaml has been deprecated, however since we only
# use it for tests, we will not update it.
serde_yaml = "0.9.34"

[[bench]]
name = "benchmark"
harness = false
required-features = ["multithreaded"]
