[package]
name = "c_eth_kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rust_eth_kzg = { workspace = true, features = ["multithreaded"] }

[build-dependencies]
cbindgen = "0.26.0"
