[package]
name = "peerdas-kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable napi6 feature because we want `BigInt` as a proxy for u64
napi = { version = "2.12.2", default-features = false, features = [
    "napi6",
    "async",
] }
napi-derive = "2.12.2"
eip7594 = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
