[package]
name = "node-eth-kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable napi6 feature because we want `BigInt` as a proxy for u64
napi = { version = "3.1.2", default-features = false, features = [
    "napi6",
    "async",
] }
napi-derive = "3.1.1"
rust_eth_kzg = { workspace = true, features = ["multithreaded"] }

[build-dependencies]
napi-build = "2.1.4"
