[package]
name = "tbd"
description = "This crate provides an implementation of the cryptography needed for EIP-4844"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
kzg_multi_open = { workspace = true }
bls12_381 = { workspace = true }
polynomial = { workspace = true }
maybe_rayon = { workspace = true }
hex = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
tracing = { version = "0.1.41", default-features = false, features = ["attributes"], optional = true }

[features]
singlethreaded = ["kzg_multi_open/singlethreaded"]
multithreaded = ["maybe_rayon/multithreaded", "kzg_multi_open/multithreaded"]
tracing = ["dep:tracing", "bls12_381/tracing", "kzg_multi_open/tracing"]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
hex = { workspace = true }
# Serde-yaml has been deprecated, however since we only
# use it for tests, we will not update it.
serde_yaml = "0.9.34"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
