[package]
name = "ekzg-serialization"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
bls12_381 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
