[package]
name = "crate_crypto_internal_eth_kzg_erasure_codes"
description = "This crate provides an implementation of erasure encoding and decoding"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
bls12_381 = { workspace = true }
polynomial = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[features]
multithreaded = ["polynomial/multithreaded"]

[[bench]]
name = "benchmark"
harness = false
