[package]
name = "crate_crypto_kzg_multi_open_fk20"
description = "This crate provides a multi-opening algorithm for KZG10 using FK20"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { workspace = true }
polynomial = { workspace = true }
maybe_rayon = { workspace = true }
hex = { workspace = true }
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[features]
singlethreading = ["bls12_381/blst-no-threads"]
multithreading = ["maybe_rayon/multithreading"]

[[bench]]
name = "benchmark"
harness = false
