[package]
name = "crate_crypto_internal_eth_kzg_polynomial"
description = "This crate provides utility methods that are needed for Polynomial objects"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
