[package]
name = "csharp_peerdas_kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]

[build-dependencies]
csbindgen = "1.9.2"
toml = "0.5"
