[package]
name = "csharp_eth_kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]

[build-dependencies]
csbindgen = "1.9.3"
toml = "0.5"
