[package]
name = "java_peerdas_kzg"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[dependencies]
jni = "^0.21.1"
eip7594 = { workspace = true }
hex = { workspace = true }

[lib]
crate_type = ["cdylib"]
