[package]
name = "java_peerdas_kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }


[dependencies]
jni = "^0.21.1"
rust_eth_kzg = { workspace = true }
hex = { workspace = true }
c_eth_kzg = { workspace = true }

[lib]
crate_type = ["cdylib"]
