[package]
name = "nim_peerdas_kzg"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["staticlib"]

[dependencies]
c_peerdas_kzg = { workspace = true }

[build-dependencies]
nbindgen = { git = "https://github.com/arnetheduck/nbindgen/" }
