[package]
name = "nim_eth_kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[build-dependencies]
nbindgen = { git = "https://github.com/arnetheduck/nbindgen/" }
