[package]
name = "ekzg-bls12-381"
description = "This crate provides the internal implementation of the BLS12-381 curve for the Eth KZG project."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

blst = { version = "0.3", default-features = false }

# __private_bench feature is used to allow us to access the base field
blstrs = { version = "0.7.1", features = ["__private_bench"] }
ff = "0.13.0"
group = "0.13"
pairing = { version = "0.23" }

# Transitively, we depend on subtle version >=2.5.0
# Adding the restrictions here codify it in rust-eth-kzg.
#
# See https://github.com/crate-crypto/rust-eth-kzg/issues/235 for more info
# as to why we need to pull it in here, even though it is not used directly.
subtle = { version = ">=2.5.0, <3.0" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
proptest = "1.6"

[features]
blst-no-threads = ["blst/no-threads"]

[[bench]]
name = "benchmark"
harness = false
