[package]
name = "crate_crypto_kzg_multi_open_fk20"
description = "This crate provides a multi-opening algorithm for KZG10 using FK20"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { workspace = true }
polynomial = { workspace = true }
maybe_rayon = { workspace = true }
sha2 = "0.10.8"
tracing = { version = "0.1.41", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"

[features]
singlethreaded = ["bls12_381/blst-no-threads"]
multithreaded = ["maybe_rayon/multithreaded"]
tracing = ["dep:tracing", "polynomial/tracing"]

[[bench]]
name = "benchmark"
harness = false
