[package]
name = "ekzg-single-open"
authors.workspace = true
description = "This crate provides a single-opening algorithm for KZG10"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
bls12_381 = { workspace = true }
polynomial = { workspace = true }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }

[lints]
workspace = true
