[package]
name = "ekzg-polynomial"
description = "This crate provides utility methods that are needed for Polynomial objects"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { workspace = true }
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
], optional = true }
maybe_rayon = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand = { workspace = true }
proptest = "1.6"

[features]
tracing = ["dep:tracing"]
multithreaded = ["maybe_rayon/multithreaded"]

[[bench]]
name = "benchmark"
harness = false
